// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalDistribution Component Snapshots renders with custom attribution 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": null,
          "props": Object {
            "className": "chart",
            "style": Object {
              "aspectRatio": "600/300",
              "height": "auto",
              "maxWidth": "600px",
              "width": "100%",
            },
          },
          "type": "svg",
        },
      ],
      "props": Object {
        "style": Object {
          "maxWidth": "600px",
          "position": "relative",
          "width": "100%",
        },
      },
      "type": "div",
    },
    Object {
      "children": Array [
        "Last updated by: ",
        "Custom User",
      ],
      "props": Object {
        "style": Object {
          "color": "#666",
          "fontSize": "0.9em",
          "fontStyle": "italic",
          "marginTop": "5px",
        },
      },
      "type": "p",
    },
  ],
  "props": Object {
    "style": Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "width": "100%",
    },
  },
  "type": "div",
}
`;

exports[`NormalDistribution Component Snapshots renders with default props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": null,
          "props": Object {
            "className": "chart",
            "style": Object {
              "aspectRatio": "600/300",
              "height": "auto",
              "maxWidth": "600px",
              "width": "100%",
            },
          },
          "type": "svg",
        },
      ],
      "props": Object {
        "style": Object {
          "maxWidth": "600px",
          "position": "relative",
          "width": "100%",
        },
      },
      "type": "div",
    },
    Object {
      "children": Array [
        "Last updated by: ",
        "System",
      ],
      "props": Object {
        "style": Object {
          "color": "#666",
          "fontSize": "0.9em",
          "fontStyle": "italic",
          "marginTop": "5px",
        },
      },
      "type": "p",
    },
  ],
  "props": Object {
    "style": Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "width": "100%",
    },
  },
  "type": "div",
}
`;
